// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table accesos {
  id int [pk]
  fecha_entrada datetime
  trabajador_id int [ref: > trabajadores.id]
}

Table avisos {
  id int [pk]
  equipo_numserie varchar(255) [ref: > equipos.id]
  user_id varchar(255) [ref: > users.id]
}

Table comentarios {
  id int [pk]
  comentario varchar(255)
  fecha datetime
  user_id varchar(255) [ref: > users.id]
}

Table equipos {
  id int [pk]
  nombre string [unique]
  descripcion string [unique, null]
  tipo_equipo_id int [ref:>tipos_equipo.id]
  sala_id int [ref:>salas.id]
  imagen string
  fecha_integracion date [null]
  activo tinyint(1) [default: 1]
  reparacion tinyint(1) [default: 0]
  mantenimiento tinyint(1) [default: 0]
}

Table incidencias {
  id int [pk]
  fecha_incidencia datetime
  tiempo_incidencia double
  tipo_incidencia_id int [ref: > tipos_incidencias.id]
  trabajador_id int [ref: > trabajadores.id]
}

Table parametros_eficacia {
  id int [pk, increment]
  fecha_parametro datetime
  valor varchar(255)
  tipo_parametro_id int [ref: > tipos_parametros.id]
}

Table permisos {
  id int [pk]
  desde datetime
  hasta datetime
  numusos int
  periodo_uso double
  equipo_numserie varchar(255) [ref: > equipos.id]
  trabajador_id int [ref: > trabajadores.id]
}

Table tipos_incidencias {
  id int [pk]
  codigo varchar(255)
  descripcion varchar(255)
  eliminado tinyint(1) [default: 0]
  equipo_numserie varchar(255) [ref: > equipos.id]
}

Table tipos_parametros {
  id int [pk]
  codigo varchar(255)
  descripcion varchar(255)
  eliminado tinyint(1) [default: 0]
  medida varchar(255)
  equipo_numserie varchar(255) [ref: > equipos.id]
}

Table trabajadores {
  id int [pk]
  dni varchar(255)
  activo tinyint(1) [default: 0]
  apellidos varchar(255)
  borrado tinyint(1) [default: 0]
  nombre varchar(255)
  urlimagen varchar(255)
  user_id varchar(255) [ref: > users.id]
}

Table usos {
  id int [pk]
  estado tinyint(1) [default: 0]
  fecha_uso datetime
  hora_fin varchar(255)
  hora_inicio varchar(255)
  equipo_numserie varchar(255) [ref: > equipos.id]
  trabajador_id int [ref: > trabajadores.id]
}

Table users {
  id int [pk]
  nombre varchar(255)
  email varchar(255) [unique]
  admin tinyint(1) [default: 0]
  password varchar(255)
  rol varchar(255)
  token varchar(255)
}

Table valores_produccion {
  id int [pk]
  fecha datetime
  value_a double [default: 0]
  value_b double [default: 0]
  value_c double [default: 0]
  value_d double [default: 0]
  value_e double [default: 0]
  value_f double [default: 0]
  equipo_numserie varchar(255) [ref: > equipos.id]
}

Table tipos_equipo {
  id int [pk]
  nombre string
}

Table salas {
  id int [pk]
  nombre string
  accesible int
}

Table movimientos {
  id int [pk]
  fecha datetime
  equipo_id int [ref:>equipos.id]
  origen string [ref:>salas.id]
  destino string [ref:>salas.id]
  trabajador_id int [ref:>trabajadores.id]
}
